src/objects/FLBCouncilMap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting holds mapping for contact attribute to public group and chatter group</description>
    <fields>
        <fullName>Chatter_Group__c</fullName>
        <inlineHelpText>Chatter Group Name</inlineHelpText>
        <label>Chatter Group</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Group__c</fullName>
        <label>Public Group</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>FLBCouncilMap</label>
</CustomObject>